@@ -1,12 +1,12 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r6p2",
+  "version": "v8r7-pre1",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p14",
+      [ "Dirac", "v6r17p15",
         [ "bin", "python", "lib" ]
       ],
-      [ "LHCbGrid", "v11r3",
+      [ "LHCbGrid", "v11r5",
         [ "bin", "python", "lib" ]
       ]
     ]
